--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        <li><a href="#survey"><i class="bi bi-survey navicon"></i> Survey</a></li>
       </ul>
     </nav>
 
