--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#survey"><i class="bi bi-emoji-smile navicon" style="background-color: #FFD700;"></i> Survey</a></li>
+        <li><a href="#survey" style="background-color: #FFD700;"><i class="bi bi-emoji-smile navicon"></i> Survey</a></li>
       </ul>
     </nav>
 
