--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#survey" style="text-decoration: none; color: black; background-color: transparent; transition: background-color 0.3s ease-in-out;"><i class="bi bi-emoji-smile navicon"></i> Survey</a></li>
+        <li><a href="#survey" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #4CAF50; color: white;"><i class="bi bi-emoji-smile navicon"></i> Survey</a></li>
       </ul>
     </nav>
 
