--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#survey" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #FFD700; color: black;font-weight:Bold;"> Survey</a></li>
+        <li><a href="#survey" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #FFD700; color: black;font-weight:Bold;"> Your Survey, Your Prize!</a></li>
       </ul>
     </nav>
 
