--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit" disabled>Send Message</button>
                 </div>
 
               </div>
@@ -395,10 +395,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">HCI MediaPipe</strong> <span>All Rights Reserved</span></p>
       </div>
     </div>
 
