--- a/index.html
+++ b/index.html
@@ -395,8 +395,12 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">HCI MediaPipe</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">HCI MediaPipe</strong> <span>Educational purpose only</span></p>
       </div>
+     <div class="credits">
+       <p></p> <span>Educational purpose only</span></p>
+      </div>
+
     </div>
 
   </footer>
