--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
         <li><a href="#survey" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #FFD700; color: black;font-weight:Bold;"> Your Survey, Your Prize!</a></li>
       </ul>
+        <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     </nav>
 
   </header>
