--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>HCI Group Profile</title>
+  <title>HCI Group Project</title>
   <meta content="This a hand gesture based feedback system for web browsing exprience" name="description">
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
 
@@ -69,9 +69,9 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>HCI Media pipe</h2>
+        <h2>HCI MediaPipe</h2>
       </br>
-        <h2>Gesture feedback system</h2>
+        <h2>Gesture-based feedback</h2>
          </div>
 
     </section><!-- /Hero Section -->
