--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
@@ -55,10 +54,14 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
-        <li><a href="#survey" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #FFD700; color: black;font-weight:Bold;"> Your Survey, Your Prize!</a></li>
+        <li><a href="#survey" onclick="openPopup()" style="text-decoration: none; padding: 10px 20px; border-radius: 5px; background-color: #FFD700; color: black;font-weight:Bold;"> Your Survey, Your Prize!</a></li>
       </ul>
     </nav>
-
+<script>
+function openPopup() {
+  window.open("popup.html", "myPopup", "width=400,height=300");
+}
+</script>
   </header>
 
   <main class="main">
