--- a/index.html
+++ b/index.html
@@ -64,11 +64,20 @@
   <main class="main">
    <!-- Pop-up section-->
     <div id="survey_popup" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
+   <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>Modal Header</h2>
     </div>
+    <div class="modal-body">
+      <p>Some text in the Modal Body</p>
+      <p>Some other text...</p>
+    </div>
+    <div class="modal-footer">
+      <h3>Modal Footer</h3>
+    </div>
+  </div>
     </div>
    <!-- END Pop-up section-->
     
