--- a/index.html
+++ b/index.html
@@ -62,20 +62,18 @@
   </header>
 
   <main class="main">
+    
    <!-- Pop-up section-->
     <div id="survey_popup" class="modal">
    <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h2>Modal Header</h2>
+      <h2>Welcome to Gesture-based feedback system</h2>
     </div>
     <div class="modal-body">
-      <p>Some text in the Modal Body</p>
+      <p>Place the survey</p>
       <p>Some other text...</p>
-    </div>
-    <div class="modal-footer">
-      <h3>Modal Footer</h3>
     </div>
   </div>
     </div>
