--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <span class="close">&times;</span>
-      <h2>Welcome to Gesture-based feedback system</h2>
+      <h2>Your feedback is our Gold</h2>
     </div>
     <div class="modal-body">
       <p>Place the survey</p>
