--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    <!-- Modal content -->
   <div class="modal-content">
     <div class="modal-body">
-      <span class="close">&times;</span>
+     <div class="close">&times;</div>
       <p>Place the survey</p>
       <p>Some other text...</p>
     </div>
