--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <div id="survey_popup" class="modal">
    <!-- Modal content -->
   <div class="modal-content">
+    <div class="close">&times;</div>
     <div class="modal-body">
-     <div class="close">&times;</div>
-      <p>Place the survey</p>
-      <p>Some other text...</p>
+      <p align="center">Place the survey</p>
+      <p align="center">Some other text...</p>
     </div>
   </div>
     </div>
