--- a/index.html
+++ b/index.html
@@ -64,16 +64,24 @@
   <main class="main">
     
    <!-- Pop-up section-->
-    <div id="survey_popup" class="modal">
-   <!-- Modal content -->
-  <div class="modal-content">
-    <div class="close">&times;</div>
-    <div class="modal-body">
-      <p align="center">Place the survey</p>
-      <p align="center">Some other text...</p>
+    <div id="survey_popup" class="modalx">
+
+  <!-- Modal content -->
+  <div class="modalx-content">
+    <div class="modalx-header">
+      <span class="close">&times;</span>
+      <h2> Header</h2>
+    </div>
+    <div class="modalx-body">
+      <p>Some text in the  Body</p>
+      <p>Some other text...</p>
+    </div>
+    <div class="modalx-footer">
+      <h3> Footer</h3>
     </div>
   </div>
-    </div>
+
+</div>
    <!-- END Pop-up section-->
     
     <!-- Home Section -->
