--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- Modal content -->
   <div class="modalx-content">
     <div class="modalx-header">
-      <span class="close">&times;</span>
+      <span class="closex">&times;</span>
       <h2> Header</h2>
     </div>
     <div class="modalx-body">
