--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2>Gesture-based feedback</h2>
          </div>
 
-    </section><!-- /Hero Section -->
+    </section><!-- /Home Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
