--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Google MediaPipe's Hand Gesture Recognition solution is a powerful tool for real-time hand gesture detection and interpretation.It leverages a combination of machine learning models to accurately identify and track hand landmarks, enabling a wide range of applications.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -111,8 +111,7 @@
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+             Hand Gesture Recognition solution is a powerful tool that enables real-time detection and interpretation of hand gestures
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -133,8 +132,7 @@
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Beyond virtual worlds, MediaPipe finds applications in human-computer interaction. It allows for hands-free control of devices and software, making technology more accessible to people with disabilities. Additionally, it can be used to create innovative gaming experiences, where players can interact with games using hand gestures.
             </p>
           </div>
         </div>
@@ -152,7 +150,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>In the realm of virtual and augmented reality, MediaPipe empowers users to interact with digital environments naturally, using hand gestures to manipulate objects, navigate spaces, and control experiences. This level of intuitive interaction enhances immersion and realism.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
