--- a/index.html
+++ b/index.html
@@ -357,12 +357,10 @@
                   <p>info@example.com</p>
                 </div>
               </div><!-- End Info Item -->
-
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59653.41127546603!2d29.32273556588414!3d40.89573363733606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cad852306a76b5%3A0x7c73e4bdab503610!2sSabanc%C4%B1%20University!5e1!3m2!1sen!2str!4v1733254004736!5m2!1sen!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      </div>
-          </div>
+                   </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="#" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
