--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!Gesture Library-->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hands.with_custom_landmarks.min.js"></script>
   <script src="assets/js/popup.js"></script>
-   <script src="hand_gesture_recog.js"></script>
+   <script src="assets/MediaPipe_lib/hand_gesture_recog.js/hand_gesture_recog.js"></script>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
