--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
-      <video id="video" width="640" height="480" autoplay hidden></video>
+      <video id="video" width="640" height="480" autoplay></video>
       <p>Some text in the  Body</p>
       <p>Some other text...</p>
     </div>
