--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   
   <!Gesture Library-->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hands.with_custom_landmarks.min.js"></script>
+  <script src="assets/MediaPipe_lib/hand_gesture_recog.js/hand_gesture_recog.js"></script>
   
   
   <!-- Favicons -->
@@ -76,7 +77,8 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
-      <video id="video" width="640" height="480" autoplay></video>
+      <video id="webcam" autoplay playsinline width="640" height="480"></video>
+      <canvas id="outputCanvas" width="640" height="480"></canvas>
       <p>Some text in the  Body</p>
       <p>Some other text...</p>
     </div>
@@ -368,7 +370,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/popup.js"></script>
-  <script src="assets/MediaPipe_lib/hand_gesture_recog.js/hand_gesture_recog.js"></script>
+  
   
 
   <!-- Main JS File -->
