--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
-      <video id="webcam" autoplay playsinline width="640" height="480"></video>
+      <video id="video" autoplay playsinline></video>
       <canvas id="outputCanvas" width="640" height="480"></canvas>
       <p>Some text in the  Body</p>
       <p>Some other text...</p>
