--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="modalx-body">
       <video id="video" autoplay playsinline></video>
-      <canvas id="outputCanvas" width="640" height="480"></canvas>
+      <canvas id="canvas" width="640" height="480"></canvas>
       <p>Some text in the  Body</p>
       <p>Some other text...</p>
     </div>
