--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
   <!Gesture Library-->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.8/camera_utils.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.5/drawing_utils.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.8/hands.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/gesture_recognizer.js"></script>
-    <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_js@0.8.6/camera.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hands.js"></script>
+  <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
   
   
   <!-- Favicons -->
