--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="modalx-body">
       <video id="video" autoplay playsinline></video>
       <canvas id="canvas" width="640" height="480"></canvas>
-      <p>Some text in the  Body</p>
+      <p id="message"></p>
       <p>Some other text...</p>
     </div>
   </div>
