--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!Gesture Library-->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_js@0.8.6/camera.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hands.js"></script>
-  <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+ <!-- <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script> -->
   
   
   <!-- Favicons -->
@@ -78,6 +78,40 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
+      <script>
+    const videoElement = document.getElementsByClassName('input_video')[0];
+    const camera = new Camera(videoElement, {
+      onFrame: async () => {
+        await hands.send({ image: videoElement   
+ });
+      },
+      width: 640,
+      height: 480
+    });
+    camera.start();
+
+    const hands = new Hands({locateFile: (file) => {
+      return `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.1/dist/mediapipe_web/${file}`;   
+
+    }});
+
+    hands.setOptions({
+      maxNumHands: 1,
+      minDetectionConfidence: 0.5,
+      minTrackingConfidence: 0.5
+    });
+
+    hands.onResults(onResults);
+
+    function onResults(results) {
+      if (results.multiHandLandmarks) {
+        for (const handLandmarks of results.multiHandLandmarks) {
+          // Process hand landmarks here
+          console.log(handLandmarks);
+        }
+      }
+    }
+  </script>
       <video id="video" autoplay playsinline></video>
       <canvas id="canvas" width="640" height="480"></canvas>
       <p id="message"></p>
