--- a/index.html
+++ b/index.html
@@ -79,38 +79,42 @@
     </div>
     <div class="modalx-body">
       <script>
-    const videoElement = document.getElementsByClassName('input_video')[0];
-    const camera = new Camera(videoElement, {
-      onFrame: async () => {
-        await hands.send({ image: videoElement   
- });
-      },
-      width: 640,
-      height: 480
-    });
-    camera.start();
+    const videoElement = document.getElementById('video');
+const canvasElement = document.getElementById('canvas');
+const canvasCtx = canvasElement.getContext('2d');
 
-    const hands = new Hands({locateFile: (file) => {
-      return `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.1/dist/mediapipe_web/${file}`;   
+const hands = new Hands({locateFile: (file) => {
+  return `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.1/dist/mediapipe_web/${file}`;
+}});
 
-    }});
+hands.setOptions({
+  maxNumHands: 1,
+  minDetectionConfidence: 0.5,
+  minTrackingConfidence: 0.5
+});
 
-    hands.setOptions({
-      maxNumHands: 1,
-      minDetectionConfidence: 0.5,
-      minTrackingConfidence: 0.5
-    });
+hands.onResults(onResults);
 
-    hands.onResults(onResults);
+function onResults(results) {
+  canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
 
-    function onResults(results) {
-      if (results.multiHandLandmarks) {
-        for (const handLandmarks of results.multiHandLandmarks) {
-          // Process hand landmarks here
-          console.log(handLandmarks);
-        }
-      }
+  if (results.multiHandLandmarks) {
+    for (const handLandmarks of results.multiHandLandmarks) {
+      drawConnectors(canvasCtx, handLandmarks, HAND_CONNECTIONS,
+                       {color: '#00FF00', lineWidth: 2});
+      drawLandmarks(canvasCtx, handLandmarks, {color: '#FF0000', lineWidth: 2});
     }
+  }
+}
+
+const camera = new Camera(videoElement, {
+  onFrame: async () => {
+    await hands.send({ image: videoElement });
+  },
+  width: 640,
+  height: 480
+});
+camera.start();
   </script>
       <video id="video" autoplay playsinline></video>
       <canvas id="canvas" width="640" height="480"></canvas>
