--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
   <!Gesture Library-->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_js@0.8.6/camera.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hands.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3"></script>
  <!-- <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script> -->
-  
+    <style>
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+    .result {
+      font-size: 2rem;
+      text-align: center;
+      margin-top: 20px;
+    }
+  </style>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -78,47 +89,78 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
-      <script>
-    const videoElement = document.getElementById('video');
-const canvasElement = document.getElementById('canvas');
-const canvasCtx = canvasElement.getContext('2d');
+      <video id="webcam" autoplay playsinline></video>
+  <div class="result" id="gestureResult">Waiting for gesture...</div>
 
-const hands = new Hands({locateFile: (file) => {
-  return `https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.1/dist/mediapipe_web/${file}`;
-}});
+  <script>
+    async function setupWebcam() {
+      const videoElement = document.getElementById('webcam');
+      
+      // Request the webcam stream
+      const stream = await navigator.mediaDevices.getUserMedia({
+        video: true
+      });
 
-hands.setOptions({
-  maxNumHands: 1,
-  minDetectionConfidence: 0.5,
-  minTrackingConfidence: 0.5
-});
-
-hands.onResults(onResults);
-
-function onResults(results) {
-  canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
-
-  if (results.multiHandLandmarks) {
-    for (const handLandmarks of results.multiHandLandmarks) {
-      drawConnectors(canvasCtx, handLandmarks, HAND_CONNECTIONS,
-                       {color: '#00FF00', lineWidth: 2});
-      drawLandmarks(canvasCtx, handLandmarks, {color: '#FF0000', lineWidth: 2});
+      videoElement.srcObject = stream;
+      return new Promise((resolve) => {
+        videoElement.onloadedmetadata = () => {
+          resolve(videoElement);
+        };
+      });
     }
-  }
-}
 
-const camera = new Camera(videoElement, {
-  onFrame: async () => {
-    await hands.send({ image: videoElement });
-  },
-  width: 640,
-  height: 480
-});
-camera.start();
+    async function setupGestureDetection() {
+      // Load MediaPipe Hand Gesture model
+      const hands = await new Tasks.HandGestureClassifier({
+        baseOptions: {
+          modelAssetPath: 'https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/hand_gesture_model.tflite',
+        }
+      });
+
+      return hands;
+    }
+
+    async function detectGesture(frame, hands) {
+      const canvasElement = document.createElement('canvas');
+      const canvasCtx = canvasElement.getContext('2d');
+      
+      // Get video frame from webcam
+      canvasElement.width = frame.width;
+      canvasElement.height = frame.height;
+      canvasCtx.drawImage(frame, 0, 0, frame.width, frame.height);
+
+      const gestures = await hands.classify(canvasElement);
+
+      if (gestures.length > 0) {
+        const gesture = gestures[0].categoryName;
+        const resultElement = document.getElementById('gestureResult');
+
+        if (gesture === 'Thumbs Up') {
+          resultElement.textContent = 'Thumbs Up!';
+        } else if (gesture === 'Thumbs Down') {
+          resultElement.textContent = 'Thumbs Down!';
+        } else {
+          resultElement.textContent = 'No gesture detected';
+        }
+      }
+    }
+
+    async function main() {
+      const videoElement = await setupWebcam();
+      const hands = await setupGestureDetection();
+
+      // Continuously process webcam frames for gesture recognition
+      const processFrame = () => {
+        detectGesture(videoElement, hands);
+        requestAnimationFrame(processFrame);
+      };
+
+      processFrame();
+    }
+
+    // Start the main program
+    main();
   </script>
-      <video id="video" autoplay playsinline></video>
-      <canvas id="canvas" width="640" height="480"></canvas>
-      <p id="message"></p>
       <p>Some other text...</p>
     </div>
   </div>
