--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
   <!Gesture Library-->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/handpose@0.3.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.0.0"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3"></script>
    <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
     <style>
     video {
