--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   
   <!Gesture Library-->
    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/handpose@0.3.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.0.0"></script>
  
     <style>
     video {
