--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <div class="modalx-body">
 
       <video id="webcam" autoplay playsinline></video>
-      <div class="result" id="gestureResult">Waiting for gesture...</div>
+      <canvas id="output_canvas">
+      <div id="gesture_output"></div>
     
       <p>Some other text...</p>
     </div>
