--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
     <div class="modalx-body">
 
       <video id="webcam" autoplay playsinline></video>
-      <canvas id="output_canvas">
-      <div id="gesture_output"></div>
+      <div id="gestureResult"></div>
     
       <p>Some other text...</p>
     </div>
