--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <span class="closex">&times;</span>
     </div>
     <div class="modalx-body">
-
+   <button id="webcamButton" class="mdc-button mdc-button--raised">
     <video id="webcam" autoplay playsinline></video>
     <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
       <p id="gesture_output" class="output">
