--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/popup.js"></script>
-  <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script> 
+  <script src="assets/MediaPipe_lib/hand_gesture_recog.js" type="module"></script> 
    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   
