--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 <style>
-    #webcam-container {
+   #webcam-container {
       position: relative;
       display: inline-block;
+      width: 640px;
+      height: 480px;
     }
     #webcam {
       transform: scaleX(-1); /* Mirror the webcam feed */
+      width: 640px;
+      height: 480px;
     }
     #gesture-msg {
       position: absolute;
