--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="This a hand gesture based feedback system for web browsing experience" name="description">
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision/vision_bundle.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/vision_bundle.js" crossorigin="anonymous"></script>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -56,7 +56,7 @@
 </head>
 
 <body class="index-page">
-
+  <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -389,8 +389,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/popup.js"></script>
-  <script src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1630862022/mediapipe/hands.js"></script>
+
 
   
   
