--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </div>
     <div class="modalx-body">
    <div id="webcam-container">
-    <video id="webcam" width="640" height="480" autoplay></video>
-    <div id="gesture-msg">Thumbs-Up Gesture Detected!</div>
+    <video id="video" width="640" height="480" autoplay muted></video>
     <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
+    <div id="gesture-msg">Thumbs-Up Gesture Detected!</div>
   </div>
     <p>Some other text...</p>
     
