--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta content="This a hand gesture based feedback system for web browsing experience" name="description">
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/vision_bundle.js" crossorigin="anonymous"></script>
+   
+   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm/"></script>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
