--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
    
-   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm"></script>-->
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
