--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="modalx-body">
    <div id="webcam-container">
-    <video id="video" width="640" height="480" autoplay muted></video>
+    <video id="video" width="640" height="480" autoplay playsinline></video>
     <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
     <div id="gesture-msg">Thumbs-Up Gesture Detected!</div>
   </div>
