--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <meta content="This a hand gesture based feedback system for web browsing experience" name="description">
   <meta content="HCI,CS449,CS549,Google,Mediapipe,Hand,Gesture,Recognition" name="keywords">
   
-   
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm"></script>-->
-  
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -101,7 +98,7 @@
    <div id="webcam-container">
     <video id="video" width="640" height="480" autoplay playsinline></video>
     <script type="module" src="assets/MediaPipe_lib/hand_gesture_recog.js"></script>
-    <div id="gesture-msg">Thumbs-Up Gesture Detected!</div>
+    <div id="gesture-msg"></div>
   </div>
     <p>Some other text...</p>
     
