--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           <div id="gesture-msg"></div>
         </div>
         <p>Additional Information</p>
+        <div id="finger-msg"></div>
       </div>
     </div>
   </div>
